# mmul

./: .gitattributes  .gitignore  result.txt
src/: CMakeLists.txt  baseline_miss.txt  benchmark_results.csv  benchmark_wasm_results.csv  build.sh  cache.txt  extract_benchmark.sh  run.sh  wasm.sh  wasm_run.sh
src/baseline/: CMakeLists.txt  benchmark.cpp  grind.cpp
src/baseline_nonpower/: CMakeLists.txt  grind.cpp
src/baseline_offset/: CMakeLists.txt  benchmark.cpp
src/baseline_pool/: benchmark.cpp
src/blocked/: CMakeLists.txt  benchmark.cpp
src/blocked_column/: CMakeLists.txt  benchmark.cpp
src/blocked_column_multi_output/: CMakeLists.txt  benchmark.cpp  grind.cpp  pre.js
src/mkl/: CMakeLists.txt  Makefile  mkl_sgemm.cpp
